--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="about-me__body">
         <p>
           i am zakaria a student in computer science.i love math physics and
-          ofcourse,i love having fun , also i like to draw things and build them
+          ofcourse computer science,i love having fun , also i like to draw things and build them
         </p>
         <p>
           i can use html css js react for front end development,as i can use
